fixing files to avoid pytest errors

--- a/imswitch/_data/user_defaults/imnotebook/ImSwitch_FocusMap.ipynb
+++ b/imswitch/_data/user_defaults/imnotebook/ImSwitch_FocusMap.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,10 +42,14 @@
     "import time\n",
     "\n",
     "# Connect to ImSwitch\n",
-    "hostname = \"localhost\"  # Change to the hostname of the computer running ImSwitch\n",
-    "port = 8001\n",
+    "if 0:\n",
+    "    hostname = \"imswitch.openuc2.com\"  # Change to the hostname of the computer running ImSwitch\n",
+    "    port = 443\n",
+    "else:\n",
+    "    hostname = \"localhost\"\n",
+    "    port = 8001\n",
     "isHttps = True\n",
-    "client = imc.ImSwitchClient(port=port, isHttps=isHttps)\n"
+    "client = imc.ImSwitchClient(host=hostname, port=port, isHttps=isHttps)\n"
    ]
   },
   {
